# ic-wp-hardening-

./: README.en.md  README.md  pyproject.toml
ic_wp_hardening/: __init__.py  cli.py
tests/: test_cli.py
